<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="Log in" />

    <TextView
        android:id="@+id/bigLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/smallLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:text="@string/sign_in_desc"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bigLogin" />

    <ImageView
        android:id="@+id/imageCenter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallLogin"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <ImageView
        android:id="@+id/imageLeft"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_science"
        app:layout_constraintBottom_toBottomOf="@+id/imageCenter"
        app:layout_constraintEnd_toStartOf="@+id/imageCenter"
        app:layout_constraintTop_toBottomOf="@+id/smallLogin" />

    <ImageView
        android:id="@+id/imageLeftLeft"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/ic_health"
        app:layout_constraintBottom_toBottomOf="@+id/imageCenter"
        app:layout_constraintEnd_toStartOf="@+id/imageLeft"
        app:layout_constraintTop_toBottomOf="@+id/smallLogin" />

    <ImageView
        android:id="@+id/imageRight"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_politics"
        app:layout_constraintBottom_toBottomOf="@+id/imageCenter"
        app:layout_constraintStart_toEndOf="@+id/imageCenter"
        app:layout_constraintTop_toBottomOf="@+id/smallLogin" />

    <ImageView
        android:id="@+id/imageRightRight"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/ic_sports"
        app:layout_constraintBottom_toBottomOf="@+id/imageCenter"
        app:layout_constraintStart_toEndOf="@+id/imageRight"
        app:layout_constraintTop_toBottomOf="@+id/smallLogin" />

    <Button
        android:id="@+id/signInButton"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>